--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,20 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TODO App</title>
   <link rel="stylesheet" type="text/css" href="/styles.css">
 </head>
 <body>
-  <h1>TODO List</h1>
-  <ul>
-    <% tasks.forEach((task) => { %>
-      <li>
-        <a href="/tasks/<%= task.id %>">
-          <%= task.title %>
-        </a>
-      </li>
-    <% }); %>
-  </ul>
-  <a href="/tasks/create">Create Task</a>
+  <header>
+    <h1>TODO List</h1>
+  </header>
+  <main>
+    <ul id="taskList">
+      <% tasks.forEach((task) => { %>
+        <li>
+          <a href="/tasks/<%= task.id %>">
+            <%= task.title %>
+          </a>
+        </li>
+      <% }); %>
+    </ul>
+    <a href="/tasks/create">Create Task</a>
+  </main>
+  <footer>
+    <p>© 2023 TODO App</p>
+  </footer>
 </body>
 </html>
