--- a/FE- views/index.ejs
+++ b/FE- views/index.ejs
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TODO App</title>
+  <title>Taskifyr</title>
   <link rel="stylesheet" type="text/css" href="/styles.css">
 </head>
 <body>
   <header>
-    <h1>TODO List</h1>
+    <h1>Taskifyr</h1>
   </header>
   <main>
     <ul id="taskList">
@@ -23,7 +23,7 @@
     <a href="/tasks/create">Create Task</a>
   </main>
   <footer>
-    <p>© 2023 TODO App</p>
+    <p>© Taskifyr</p>
   </footer>
 </body>
 </html>
